--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,6 @@
 ---
 import Icon from "./Icon.astro";
 import ThemeToggle from "./ThemeToggle.astro";
-import type { iconPaths } from "./IconPaths";
 
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
@@ -77,7 +76,7 @@ const textLinks: { label: string; href: string }[] = [
       </button>
     </div>
     <div
-      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:py-2.5 md:px-5 md:me-2 md:mb-2 text-2xl md:text-sm font-medium md:text-gray-900 focus:outline-none md:bg-white md:rounded-full md:border md:border-gray-200 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:md:bg-gray-800 dark:md:text-gray-400 dark:md:border-gray-600"
+      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1 md:py-2.5 md:px-5 md:me-2 md:mb-2 text-2xl md:text-sm font-medium md:text-gray-900 focus:outline-none md:bg-white md:rounded-lg md:border md:border-gray-200 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:md:bg-gray-800 dark:md:text-gray-400 dark:md:border-gray-600"
       id="navbar-sticky"
     >
       <ul
