--- a/src/components/Recomendation.astro
+++ b/src/components/Recomendation.astro
@@ -35,7 +35,7 @@ import Title from "../layouts/Titles.astro";
           >
             Fransisco Cogollo
           </p>
-          <p class="text-xs text-gray-400 text-center md:text-left">
+          <p class="text-xs text-blue-700 dark:text-[#7e5aff] font-semibold text-center md:text-left">
             Lead DevOps Engineer @EPAM Systems
           </p>
         </div>
