--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,8 +10,8 @@ import Hero from "../components/Hero.astro";
 import Recomendation from "../components/Recomendation.astro";
 import Projects from "../components/Projects.astro";
 import Education from "../components/Education.astro";
-import Info from "../components/Info.astro";
 import Gallery from "../components/Gallery.astro";
+import Contact from '../components/Contact.astro'
 ---
 
 <BaseLayout>
@@ -22,5 +22,5 @@ import Gallery from "../components/Gallery.astro";
   <Education />
   <About />
   <Recomendation />
-  <Info />
+  <Contact/>
 </BaseLayout>
