--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -6,7 +6,9 @@ import Paragraph from "../layouts/Paragraph.astro";
 
 <Section id="about">
   <Title>About @me</Title>
-  <Paragraph class="text-wrap dark:font-semibold bg-[url('/assets/backgrounds/blob-scene-haikei-hero.svg')] dark:bg-[url('/assets/backgrounds/blob-scene-haikei-hero-dark.svg')] bg-cover bg-center bg-no-repeat rounded-2xl px-4 py-4 text-white dark:text-gray-700">
+  <Paragraph
+    class="text-wrap dark:font-semibold bg-[url('/assets/backgrounds/blob-scene-haikei-hero.svg')] dark:bg-[url('/assets/backgrounds/blob-scene-haikei-hero-dark.svg')] bg-cover bg-center bg-no-repeat rounded-2xl px-4 py-4 text-white dark:text-gray-700"
+  >
     Ever since childhood, I harbored an insatiable passion and curiosity for
     unraveling the intricacies of the World Wide Web. This fervor ignited the
     moment I laid my hands on my first computer, and it only intensified with
@@ -17,30 +19,20 @@ import Paragraph from "../layouts/Paragraph.astro";
   </Paragraph>
   <a class="flex justify-center" href="/aboutMe/">
     <button
-      data-tooltip-target="tooltip-animation-about"
+      data-tooltip-target="tooltip-about"
       type="button"
-      class="text-white text-lg md:text-2xl bg-blue-700 hover:bg-[#665fcc] dark:bg-[#665fcc] dark:hover:bg-blue-700 font-medium rounded-3xl w-auto px-5 py-2.5 text-center"
+      class="relative text-white text-lg md:text-2xl bg-blue-700 hover:bg-[#665fcc] dark:bg-[#665fcc] dark:hover:bg-blue-700 font-medium rounded-3xl w-auto px-5 py-2.5 text-center"
     >
       Know Me Better?
+      <div
+        id="tooltip-about"
+        role="tooltip"
+        class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700"
+      >
+        About Me so far
+        <div class="tooltip-arrow" data-popper-arrow></div>
+      </div>
     </button>
   </a>
-  <div
-    id="tooltip-animation-about"
-    role="tooltip"
-    class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700"
-  >
-    About Me so far
-    <div class="tooltip-arrow" data-popper-arrow></div>
-  </div>
 </Section>
-<!-- <Title class="pb-8">Music I like</Title>
-  <div class="rounded-xl ring-2 ring-white">
-    <iframe
-    style="border-radius:12px"
-    src="https://open.spotify.com/embed/playlist/3y5DnmUjTZR0fuOM8zJ733?utm_source=generator&theme=0"
-    width="100%"
-    height="352"
-    allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-    loading="lazy"></iframe>
-  </div> -->
+
