--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,7 @@ const { title, description } = Astro.props;
   <body
     class="relative bg-[#001220] text-neutral-400 dark:text-slate-900 dark:bg-indigo-100"
   >
-    <div class="w-full h-full">
+    <div class="relative h-full w-full">
       <Nav />
       <slot />
       <FooterV2 />
