--- a/src/layouts/Section.astro
+++ b/src/layouts/Section.astro
@@ -5,7 +5,7 @@ const { class: className, id } = Astro.props
 <section
   id={id}
   data-section={id}
-  class={`section ${className} w-full h-auto mx-auto lg:w-[800px] px-4 my-40 text-center`}
+  class={`section ${className} w-full mx-auto lg:w-[800px] px-4 my-40 text-center`}
 >
   <slot />
 </section>
